log/build_2022-11-29_12-30-05/doa/stderr.log
  File "/home/eragond/Documents/Robotica/DOA/install/doa/lib/python3.8/site-packages/doa/doa_action_server.py", line 49
    if(direccion < 10 and direccion > 0)
                                       ^
SyntaxError: invalid syntax

